--- a/main.css
+++ b/main.css
@@ -482,7 +482,8 @@ a.result_top_btn2:hover {
 .length_1_box,
 .length_12_box,
 .length_23_box,
-.length_3_box {
+.length_3_box,
+.comparison_wrapper {
     width: 700px;
     margin: 30px 0px;
     padding: 0.5em 1em;
@@ -492,4 +493,27 @@ a.result_top_btn2:hover {
 
 .admin_wrapper {
     margin: 100px 113px;
+}
+
+/* ------------------------------------ */
+#copy-page {
+    display: inline-block;
+    width: 120px;
+    padding: 8px 0;
+    text-align: center;
+    outline: none;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#copy-page:hover {
+    cursor: pointer;
+    opacity: .7;
+}
+
+.copy_btn_box {
+    text-align: center;
+    margin: 60px 0 0 0;
 }
